commiting peark flow site index and css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,142 @@
-<html>
-<body>
-hello World
-</body>
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <title>
+
+            Peak Flow Monitor
+
+        </title>
+        <link media="screen" type="text/css" href="css_main.css" rel="stylesheet"></link>
+    </head>
+    <body>
+        <!--
+
+        -------------------------------------------------
+
+        -->
+        <!--
+
+        ------------------- HEADER ----------------------
+
+        -->
+        <!--
+
+        -------------------------------------------------
+
+        -->
+        <header> … </header>
+        <nav> … </nav>
+        <!--
+
+        -------------------------------------------------
+
+        -->
+        <!--
+
+        ---------- Main content Area --------------------
+
+        -->
+        <!--
+
+        -------------------------------------------------
+
+        -->
+        <div>
+            <section>
+                <article id="message_left">
+                    <img width="320" height="210" alt="Running for Me!" src="daisy.jpg"></img>
+                </article>
+            </section>
+            <section>
+                <article id="message_right">
+                    <header>
+                        <h2>
+
+                            Welcome!
+
+                        </h2>
+                    </header>
+                    <p>
+
+                        Air quality has become an increasingly large issue in todays rural and 
+                        						urban areas. This poses a particularly hazardous issue for people 
+                        						who are already suffering from respiritory issues. We are working to develop an effortless
+                                                system for Asthma patients to keep themsleves, their physicians, and their family up to date
+                                                with their Peak Flow information.
+                        					
+
+                    </p>
+                </article>
+            </section>
+            <div>
+                <!--
+
+                -------------------------------------------------
+
+                -->
+                <!--
+
+                ------------------ FOOTER -----------------------
+
+                -->
+                <!--
+
+                -------------------------------------------------
+
+                -->
+                                <footer>
+                    <div>
+                        <section id="about">
+                            <header>
+                                <h3>
+
+                                    About
+
+                                </h3>
+                            </header>
+                            <p>
+
+                                Peak Flow Monitor is a simple solution to help Asthma patients track their Peak Flow throughout the day that also allows them to share their information easily with their family and physicians.
+
+                                <br></br>
+                                <br></br>
+
+                                We are a technology company based in Buffalo NY.
+
+                            </p>
+                        </section>
+                        <section id="contact">
+                            <header>
+                                <h3>
+
+                                    Contact
+
+                                </h3>
+                            </header>
+                            <ul>
+                                <li>
+                                    <a target="_top" href="mailto:justinla@buffalo.edu?Subject=Peak Flow Monitor">
+
+
+                                        						justinla@buffalo.edu
+
+                                    </a>
+                                </li>
+                                <li>
+                                    <a target="_top" href="mailto:zjward@buffalo.edu?Subject=Peak Flow Monitor">
+
+
+                                        						zjward@buffalo.edu
+
+                                    </a>
+                                </li>
+                            </ul>
+                        </section>
+                    </div>
+                </footer>
+            </div>
+        </div>
+    </body>
+
 </html>
